@@ -4,6 +4,6 @@ use warnings;
 use Test::More;
 BEGIN { use_ok('RPi::WiringPi') };
 BEGIN { use_ok('RPi::WiringPi::Pin') };
-BEGIN { use_ok('RPi::WiringPi::Core') };
+BEGIN { use_ok('WiringPi::API') };
 
 done_testing();
