@@ -6,6 +6,9 @@ Revision history for Perl extension RPi::WiringPi.
         - Core::setup_sys() now exports all pins automatically with sudo. This
           setup method is now the default if none is specified in new(),
           meaning that by default, we now use the BCM pin numbering scheme
+        - renamed RPi::WiringPi::Core to WiringPi::API
+        - cleaned up code in Interrupt to deal with the much improved way we
+          now handle interrupts
 
 0.05    2016-08-13
         - renamed WiringPi::pin_map() to gpio_scheme()
